# mai_object-oriented-programming_lab-1

./: CMakeLists.txt  README.md  function.cpp  function.h  main.cpp  tests.cpp
